2005-05-23  Roland McGrath  <roland@redhat.com>

	* sysdeps/arm, sysdeps/unix/sysv/linux/arm: Subdirectories moved to
	ports repository.

2005-05-23  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/unix/sysv/linux/powerpc/powerpc32/sysdep-cancel.h
	[IS_IN_librt] (CENABLE, CDISABLE): Use JUMPTARGET instead of
	__librt_*_asynccancel@local.

2005-05-17  Alan Modra  <amodra@bigpond.net.au>

	* sysdeps/unix/sysv/linux/powerpc/powerpc32/sysdep-cancel.h: Delete
	all occurrences of JUMPTARGET.  Instead append @local to labels.
	* sysdeps/unix/sysv/linux/powerpc/powerpc32/vfork.S: Likewise.

2005-05-19  Richard Henderson  <rth@redhat.com>

	* sysdeps/ia64/pspinlock.c (__pthread_spin_lock): Use
	__sync_val_compare_and_swap, not explicit _si variant.
	(__pthread_spin_trylock): Likewise.

2005-05-05  Daniel Jacobowitz  <dan@codesourcery.com>

	* sysdeps/unix/sysv/linux/i386/sysdep-cancel.h: Remove explicit
	.eh_frame section, use cfi_* directives.

2005-04-27  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/pthread/getcpuclockid.c: Include spinlock.h.
	Fix a typo in kernel-posix-cpy-timers.h include name, use <> instead
	of "" includes.
	(pthread_getcpuclockid): Fix 2 typos.

2005-04-27  Roland McGrath  <roland@redhat.com>

	* sysdeps/pthread/getcpuclockid.c (pthread_getcpuclockid)
	[__NR_clock_getres]: Use kernel-supplied CPU clocks if available.

2005-03-31  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/unix/sysv/linux/x86_64/sysdep-cancel.h: Use
	functionally equivalent, but shorter instructions.

2005-03-28  Daniel Jacobowitz  <dan@codesourcery.com>

	* sysdeps/mips/tls.h: New file.
	* sysdeps/unix/sysv/linux/mips/vfork.S: New file.

2005-03-21  GOTO Masanori  <gotom@debian.or.jp>

	* linuxthreads/sysdeps/m68k/Makefile: Remove to delete
	unneeded o-iterator thing.

2005-02-21  H.J. Lu  <hongjiu.lu@intel.com>

	* sysdeps/unix/sysv/linux/ia64/pt-initfini.c: Add local _init
	and _fini labels.

2005-03-05  Ulrich Drepper  <drepper@redhat.com>
